Name:                pwstore-fast
Version:             2.1
Synopsis:            Secure password storage.
Description:         To store passwords securely, they should be salted,
                     then hashed with a slow hash function. This library
                     uses PBKDF1-SHA256, and handles all the details.
                     It uses the cryptohash package for speed; if you need
                     a pure Haskell library, pwstore-purehaskell has the
                     exact same API, but uses only pure Haskell. It is
                     about 25 times slower than this package, but still 
                     quite usable.

Homepage:            https://github.com/PeterScott/pwstore
License:             BSD3
License-file:        LICENSE
Author:              Peter Scott
Maintainer:          pjscott@iastate.edu
Category:            Cryptography
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2

flag pwstoreprog
  Default:         True
  description:     Build the pwstore program

Library
  Exposed-modules: Crypto.PasswordStore
  Build-depends:   base >= 4, base < 5, bytestring >= 0.9,
                   base64-bytestring >= 0.1,
                   cryptohash >= 0.6, random >= 1
  ghc-options:     -Wall

Executable         pwstore-fast
  if flag(pwstoreprog)
    Buildable: True
  else
    Buildable: False

  Main-is:         pwstore.hs
  Other-modules:   Paths_pwstore_fast
  Build-depends:   base == 4.*, cmdargs == 0.7.*, utf8-string == 0.3.*
  Ghc-options:     -Wall -fno-warn-missing-fields
  Extensions:      DeriveDataTypeable, RecordWildCards
