Name:                pwstore-purehaskell
Version:             0.1
Synopsis:            Secure password storage, in pure Haskell.
Description:         To store passwords securely, they should be salted,
                     then hashed with a slow hash function. This library
                     uses PBKDF1-SHA256, and handles all the details.
                     It is implemented in pure Haskell, with no C
                     dependencies.

License:             BSD3
License-file:        LICENSE
Author:              Peter Scott
Maintainer:          pjscott@iastate.edu
Category:            Crypto
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2


Library
  Exposed-modules: Crypto.PasswordStore
  Build-depends:   base == 4.*, bytestring == 0.9.*,
                   base64-bytestring == 0.1.*,
                   cryptohash >= 0.6 
  ghc-options:     -Wall -O2
  
