Name:                pwstore-purehaskell
Version:             0.1
Synopsis:            Secure password storage, in pure Haskell.
Description:         To store passwords securely, they should be salted,
                     then hashed with a slow hash function. This library
                     uses PBKDF1-SHA256, and handles all the details.
                     It is implemented in pure Haskell, with no C
                     dependencies. For a faster implementation, the
                     pwstore-fast package has the exact same API but is
                     much faster due to its use of the cryptohash package,
                     which is partly implemented in C. This pure Haskell
                     version is noticeably slower, but still quite usable.

License:             BSD3
License-file:        LICENSE
Author:              Peter Scott
Maintainer:          pjscott@iastate.edu
Category:            Crypto
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2


Library
  Exposed-modules: Crypto.PasswordStore
  Build-depends:   base == 4.*, bytestring == 0.9.*,
                   base64-bytestring == 0.1.*,
                   SHA >= 1.4.1, random == 1.*
  ghc-options:     -Wall -O2
  
